--- a/style/style.css
+++ b/style/style.css
@@ -3,11 +3,9 @@
     @import url(//db.onlinewebfonts.com/c/827d075b1538829cc0db75696e4d5fa2?family=Speedee);
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
-.topline{
-    border-top: 2px solid #dddada75;
-}
+
 .menu{
-    margin-left: 367px;
+    box-shadow: 3px 3px 3px #050505a2;
     position: relative;
     display: flex;
     flex-direction: row;
@@ -15,6 +13,7 @@
     
 }
 .logo{ 
+    margin-left: 367px;
     width: 108px;
     height: 100%;
     padding: 8px;
